2024-02-23 feature/remove lombok and downgrade java to 1.8