@@ -1,16 +1,16 @@
 package com.github.ppzxc.crypto;
 
-import java.util.Arrays;
-import lombok.Getter;
+import static com.github.ppzxc.crypto.TransformationMode.CIPHER_BLOCK_CHAINING;
+import static com.github.ppzxc.crypto.TransformationPkcs.PKCS5PADDING;
+import static com.github.ppzxc.crypto.TransformationPkcs.PKCS7PADDING;
+import static com.github.ppzxc.crypto.TransformationType.ADVANCED_ENCRYPTION_STANDARD;
 
-@Getter
+import java.util.Arrays;
+
 public enum Transformation {
   RSA(TransformationType.RSA, null, null),
-  AES_CBC_PKCS5PADDING(TransformationType.ADVANCED_ENCRYPTION_STANDARD, TransformationMode.CIPHER_BLOCK_CHAINING,
-    TransformationPkcs.PKCS5PADDING),
-  AES_CBC_PKCS7PADDING(TransformationType.ADVANCED_ENCRYPTION_STANDARD, TransformationMode.CIPHER_BLOCK_CHAINING,
-    TransformationPkcs.PKCS7PADDING),
-  ;
+  AES_CBC_PKCS5PADDING(ADVANCED_ENCRYPTION_STANDARD, CIPHER_BLOCK_CHAINING, PKCS5PADDING),
+  AES_CBC_PKCS7PADDING(ADVANCED_ENCRYPTION_STANDARD, CIPHER_BLOCK_CHAINING, PKCS7PADDING);
 
   private final TransformationType transformationType;
   private final TransformationMode transformationMode;
@@ -27,7 +27,7 @@ public enum Transformation {
     if (transformationType == TransformationType.RSA) {
       return transformationType.getCode();
     } else {
-      return "%s/%s/%s".formatted(transformationType.getCode(), transformationMode.getCode(),
+      return String.format("%s/%s/%s", transformationType.getCode(), transformationMode.getCode(),
         transformationPkcs.getCode());
     }
   }
@@ -39,6 +39,18 @@ public enum Transformation {
       .filter(tran -> tran.transformationPkcs == null || tran.transformationPkcs.getCode().equalsIgnoreCase(pkcs))
       .findAny()
       .orElseThrow(() -> new IllegalArgumentException(
-        "type=%s mode=%s pkcs=%s not supported transformation".formatted(type, mode, pkcs)));
+        String.format("type=%s mode=%s pkcs=%s not supported transformation", type, mode, pkcs)));
+  }
+
+  public TransformationType getTransformationType() {
+    return transformationType;
+  }
+
+  public TransformationMode getTransformationMode() {
+    return transformationMode;
+  }
+
+  public TransformationPkcs getTransformationPkcs() {
+    return transformationPkcs;
   }
 }
